--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,11 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "loguru>=0.7.3",
-    "torch>=2.8.0",
-    "torchvision>=0.23.0",
+    "numpy>=2.3.2",
+    "torch>=2.9.0.dev20250824",
+    "torchvision>=0.24.0.dev20250824",
     "tqdm>=4.67.1",
 ]
+
+[[tool.uv.index]]
+url = "https://download.pytorch.org/whl/nightly/rocm6.4/"
